# Aduanas_Backend

./: .gitignore  aduanas-backend-28de18b87eee.json  configurations.py  data.txt  drive_config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
Controller/: DriveController.py  NotificacionController.py  PedidoController.py  TwilioController.py  UsuarioController.py
Model/: ClienteModel.py  DriveModel.py  NotificacionModel.py  PedidoModel.py  TwilioModel.py  UsuarioModel.py
Repository/: BaseRepository.py  MySqlRepository.py  NotificacionRepository.py  PedidoRepository.py  TwilioRepository.py  UsuarioRepository.py
Service/: DriveServiceImp.py  IDriveService.py  INotificacionService.py  IPedidoService.py  ITwilioService.py  IUsuarioService.py  NotificacionServiceImp.py  PedidoServiceImp.py  TwilioServiceImp.py  UsuarioServiceImp.py
Test/: configurations_mock.py  conftest.py  test_notificacion.py  test_pedido.py  test_twilio.py  test_usuario.py
aduanas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: aduanas-backend-28de18b87eee.json  configurations.py  drive_config.py  main.py
app/Controller/: DriveController.py  EmailController.py  NotificacionController.py  PedidoController.py  TwilioController.py  UsuarioController.py
app/Model/: EmailModel.py  NotificacionModel.py  PedidoModel.py  UsuarioModel.py
app/Repository/: MySqlRepository.py  NotificacionRepository.py  PedidoRepository.py  TwilioRepository.py  UsuarioRepository.py
app/Service/: Autenticacion.py  AutenticacionUtil.py  DriveServiceImp.py  (+11 more)
